--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -31,7 +31,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
         android:gravity="center"
-        android:text="Log in with your data that you entered during your reginstration"
+        android:text="Log in with your data that you entered during your registration"
         android:textColor="@color/brown"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
