--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -10,6 +10,9 @@
             android:icon="@drawable/baseline_home_24"
             android:title="Home"/>
         <item
+            android:id="@+id/nav_my_lists"
+            android:title="My Lists" />
+        <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/baseline_settings_24"
             android:title="Settings"/>
